--- a/CSS/style.css
+++ b/CSS/style.css
@@ -395,7 +395,7 @@
     height:100px;
     width:500px;
     /* height: 300px; */
-    /* background-image: url(../rockwall.jpg); */
+    /* background-image: url(/Pics/rockwall.jpg); */
     background-size:cover;
     background-color: rgb(246, 61, 61);
     border: 5px ;
@@ -407,7 +407,7 @@
   .overflow-child{
     height:150px;
     width:400px;
-    background-image: url(../friends.jpg);
+    background-image: url(/Pics/friends.jpg);
     background-size: cover;
   }
   .visible{
